--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+RPGGameGroupGame/Content/ThirdPersonBP/Maps/World.umap
